5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4327/executions/1728_2496.log
== TEST (2019-05-15 15:03:38) 
-- CODE:
num=int(input("digite um numero:"))
while (num != -1):
	if(num != -1):
		cont=cont+num

input ()
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    cont=cont+num
NameError: name 'cont' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:06:25) 
-- CODE:
num=int(input("digite um numero:"))
cont=0
while (num != -1):
		cont=cont+num
		fim=int(input("digite um numero:"))
		print(num)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    fim=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-28 02:34:24) 
-- CODE:
num = int(input("Digite um numero: "))
soma = 0
while (num != -1):
	soma = soma + num
	num = int(input("Digite um numero: "))
print(soma)
-- EXECUTION TIME:
0.760504
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
